# homematicip-exporter

./: .travis.yml  AUTHORS  ChangeLog  Dockerfile  Makefile  README.md  exporter.py  requirements.txt  setup.cfg
.github/workflows/: docker-build.yml  python-check.yml
tests/: test_exporter.py
